// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render VideoScreen - isPlaying = false 1`] = `
<div
  className="player"
>
  <div
    className="children-component"
  />
  <a
    className="player__exit"
    href="/films/1"
    onClick={[Function]}
  >
    Exit
  </a>
  <div
    className="player__controls"
  >
    <div
      className="player__controls-row"
    >
      <div
        className="player__time"
      >
        <progress
          className="player__progress"
          max="100"
          value="19"
        />
        <div
          className="player__toggler"
          style={
            Object {
              "left": "19%",
            }
          }
        >
          Toggler
        </div>
      </div>
      <div
        className="player__time-value"
      >
        10:50
      </div>
    </div>
    <div
      className="player__controls-row"
    >
      <button
        className="player__play"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          height="21"
          viewBox="0 0 14 21"
          width="14"
        >
          <use
            xlinkHref="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
      <div
        className="player__name"
      >
        Fantastic Beasts: The Crimes of Grindelwald2
      </div>
      <button
        className="player__full-screen"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="27"
          viewBox="0 0 27 27"
          width="27"
        >
          <use
            xlinkHref="#full-screen"
          />
        </svg>
        <span>
          Full screen
        </span>
      </button>
    </div>
  </div>
  <div
    className="error"
  >
    <p
      className="error__message"
    >
      Internal Server Error. Please, refresh page.
    </p>
    <button
      className="error__button"
      href="#"
      onClick={[Function]}
    >
      Refresh page
    </button>
  </div>
</div>
`;

exports[`Render VideoScreen - isPlaying = true 1`] = `
<div
  className="player"
>
  <div
    className="children-component"
  />
  <a
    className="player__exit"
    href="/films/1"
    onClick={[Function]}
  >
    Exit
  </a>
  <div
    className="player__controls"
  >
    <div
      className="player__controls-row"
    >
      <div
        className="player__time"
      >
        <progress
          className="player__progress"
          max="100"
          value="19"
        />
        <div
          className="player__toggler"
          style={
            Object {
              "left": "19%",
            }
          }
        >
          Toggler
        </div>
      </div>
      <div
        className="player__time-value"
      >
        10:50
      </div>
    </div>
    <div
      className="player__controls-row"
    >
      <button
        className="player__play"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          height="21"
          viewBox="0 0 14 21"
          width="14"
        >
          <use
            xlinkHref="#pause"
          />
        </svg>
        <span>
          Pause
        </span>
      </button>
      <div
        className="player__name"
      >
        Fantastic Beasts: The Crimes of Grindelwald2
      </div>
      <button
        className="player__full-screen"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="27"
          viewBox="0 0 27 27"
          width="27"
        >
          <use
            xlinkHref="#full-screen"
          />
        </svg>
        <span>
          Full screen
        </span>
      </button>
    </div>
  </div>
</div>
`;
